# gst-plugins-rtp

./: .gitignore  README.md  meson.build  meson_options.txt
debian/: changelog  control  copyright  rules  watch
gst/: gst_object_set_properties_from_uri_query.c  gst_object_set_properties_from_uri_query.h  gstrtp-utils.h  gstrtpcaps.h  gstrtpsink.c  gstrtpsink.h  gstrtpsrc.c  gstrtpsrc.h  meson.build  plugin.c
tests/: meson.build  rtpsink.c  rtpsrc.c
